# src/controllers/order-controller.js
@@ -2,6 +2,7 @@
 
 const ValidationContract = require('../validators/fluent-validator');
 const repository = require('../repositories/order-repository');
+const authService = require('../services/auth-service');
 
 exports.getAll = async (req, res, next) => {
   try {
@@ -12,7 +13,6 @@ exports.getAll = async (req, res, next) => {
   }
 };
 
-
 exports.post = async (req, res, next) => {
   try {
     const data = req.body;
@@ -21,6 +21,10 @@ exports.post = async (req, res, next) => {
 
     if (!contract.isValid()) return res.status(400).send(contract.errors());
 
+    const token = req.headers['authorization'].split(' ')[1];
+    const customer = authService.decodeToken(token);
+    data.customer = customer._id;
+    
     const order = await repository.post(data);
     return res.status(201).send(order);
   } catch (e) {
