# src/routes/order-route.js
@@ -3,8 +3,9 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/order-controller');
+const authService = require('../services/auth-service');
 
-router.get('/', controller.getAll);
-router.post('/', controller.post);
+router.get('/', authService.authorize, controller.getAll);
+router.post('/', authService.authorize, controller.post);
 
 module.exports = router;
