# src/routes/product-route.js
@@ -5,15 +5,14 @@ const router = express.Router();
 const controller = require("../controllers/product-controller");
 const authService = require("../services/auth-service");
 
-router.post('/', authService.authorize,controller.post);
+router.post('/', authService.authorize, controller.post);
 
-router.get('/', controller.getAll);
-router.get('/:slug', controller.getBySlug);
-router.get('/tag/:tag', controller.getByTag);
-router.get('/id/:id', controller.getById);
+router.get('/', authService.authorize, controller.getAll);
+router.get('/:slug', authService.authorize, controller.getBySlug);
+router.get('/tag/:tag', authService.authorize, controller.getByTag);
+router.get('/id/:id', authService.authorize, controller.getById);
 
-router.put('/id/:id', controller.put);
-router.delete('/id/:id', controller.delete);
-
+router.put('/id/:id', authService.authorize, controller.put);
+router.delete('/id/:id', authService.authorize, controller.delete);
 
 module.exports = router;
